# OLD-fractal-tasks-template

./: .gitignore  LICENSE  README.md  pyproject.toml
MyProject/: __FRACTAL_MANIFEST__.json  my_task.py
MyProject/dev/: update_manifest.py
PROJECTNAME/: __FRACTAL_MANIFEST__.json  my_task.py
PROJECTNAME/dev/: update_manifest.py
src/: __FRACTAL_MANIFEST__.json
tests/: __init__.py  test_valid_args_schemas.py  test_valid_manifest.py  test_valid_task_interface.py
