[project]
name = "PROJECTNAME"
version = "0.0.1"
description = "Description of this package"
authors = [{name="Name Surname", email="name.surname@example.com"}]
license = {file = "LICENSE"}

requires-python = ">=3.9"
dependencies = [
  "fractal-tasks-core",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["PROJECTNAME"]

[tool.setuptools.package-data]
"*" = ["__FRACTAL_MANIFEST__.json"]
